--- a/AssignmentB2/app/src/main/res/layout/activity_main.xml
+++ b/AssignmentB2/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,7 @@
     tools:context=".MainActivity">
 
     <ListView
-        android:id="@+id/songs"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="match_parent"
+        android:id="@+id/listView" />
 </RelativeLayout>
